examples/canary-project/src/bad/consumer-c.ts
import { hub } from './hub.js'
export const consumer_c = (): string => hub()
